--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
                 <div class="col-md-3">
                     <h2>Filtro para quem gosta de rock</h2>
                     <p>Nesta opção você verá apenas as pessoas que gostam de rock.</p>
-                    <p><a class="btn btn-secondary" href="#" role="button">Ver detalhes &raquo;</a></p>
+                    <p><a class="btn btn-secondary" href="rock.php" role="button">Ver detalhes &raquo;</a></p>
                 </div>
                 <div class="col-md-3">
                     <h2>Filtro para quem não gosta de rock</h2>
                     <p>Nesta opção você verá apenas as pessoas que não gostam de rock.</p>
-                    <p><a class="btn btn-secondary" href="#" role="button">Ver detalhes &raquo;</a></p>
+                    <p><a class="btn btn-secondary" href="norock.php" role="button">Ver detalhes &raquo;</a></p>
                 </div>
             </div>
         </div>
